--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -496,7 +496,98 @@
 	text-decoration:none;
 	color:#000;
 }
-
+.mail-container{
+	width:100%;
+	height:30%;
+	background-color:#f5f5f5;
+}
+.mail-card{
+	width:75%;
+	display:flex;
+	flex-direction:row;
+	margin:auto;
+}
+.mail-img{
+	margin-top:5.5%;
+}
+.mail-img img{
+	width:100%;
+}
+.update{
+	margin-left:4%;
+	margin-top:5.5%;
+}
+.update h1{
+	font-size:24px;
+	letter-spacing:1px;
+	color:#232b2b;
+}
+.update p{
+	color:#808080;
+}
+.mail{
+	margin-top:6%;
+	float:right;
+	margin-left:13%;
+}
+.mail .text{
+	width:320px;
+	height:50px;
+	border:1px solid #808080;
+	border-radius:3px;
+}
+.mail .send-btn{
+	width:110px;
+	height:50px;
+	background-color:#1e90ff;
+	border-radius:3px;
+	border:none;
+	color:white;
+	font-weight:bold;
+	letter-spacing:1px;
+}
+.mail .text::placeholder{
+	padding:10px;
+}
+.box{
+	display:none;
+}
+.footer{
+	width:90%;
+	margin:0 auto;
+	display:flex;
+	flex-direction:row;;
+}
+.f-card{
+	width:25%;
+}
+.f-card1{
+	width:25%;
+}
+.f-card2{
+	width:25%;
+}
+.f-card3{
+	width:25%;
+}
+.f-head{
+	letter-spacing:1px;
+	font-size:18px;
+	text-decoration:underline;
+	text-underline-offset: 16px;
+	text-decoration-color:#808080;
+	text-decoration-thickness: 1px;
+}
+.f-head1{
+	font-size:20px;
+	font-weight:200px;
+}
+.line{
+	color:white;
+}
+.f-para{
+	margin-top:10%;
+}
 
 @media screen and (max-width: 768px){
 	.about-banners{
@@ -950,5 +1041,103 @@
 	display:none;
 }
 
+.mail-container{
+	width:100%;
+	height:auto;
+	background-color:#f5f5f5;
+}
+.mail-card{
+	width:100%;
+	display:flex;
+	flex-direction:column;
+	margin:auto;
+}
+.mail-img{
+	margin-top:5.5%;
+	text-align:center;
+}
+.mail-img img{
+	width:25%;
+}
+.update{
+	text-align:center;
+	margin-top:2%;
+	margin-bottom:3%;
+}
+.update h1{
+	font-size:20px;
+	letter-spacing:1px;
+	color:#232b2b;
+}
+.update p{
+	color:#808080;
+	font-size:14px;
+}
+.mail{
+	margin:0 auto;
+}
+.mail .text{
+	width:180px;
+	height:35px;
+	border:1px solid #808080;
+	border-radius:3px;
+}
+.mail .send-btn{
+	width:100px;
+	height:35px;
+	background-color:#1e90ff;
+	border-radius:3px;
+	border:none;
+	color:white;
+	font-weight:medium;
+	letter-spacing:1px;
+	font-size:14px;
+}
+.mail .text::placeholder{
+	padding:10px;
+}
+.box{
+	height:20px;
+	display:flex;
+}
+.footer{
+	width:90%;
+	margin:0 auto;
+	display:flex;
+	flex-direction:column;
+}
+.f-card{
+	width:100%;
+}
+.f-card1{
+	width:100%;
+	margin-top:8%;
+}
+.f-card2{
+	width:100%;
+	margin-top:8%;
+}
+.f-card3{
+	width:100%;
+	margin-top:8%;
+}
+.f-head{
+	letter-spacing:1px;
+	font-size:20px;
+	text-decoration:underline;
+	text-underline-offset: 16px;
+	text-decoration-color:#808080;
+	text-decoration-thickness: 1px;
+}
+.f-head1{
+	font-size:18px;
+	font-weight:200px;
+}
+.line{
+	color:white;
+}
+.f-para{
+	margin-top:5%;
+}
 
 }
