--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -184,24 +184,24 @@
 	padding:45px;
 }*/
 
-.container{
+.containerguide{
 	width:90%;
 	height:auto;
 	margin:0 auto;
 	display:flex;
 	flex-direction:row;
 }
-.container .left{
+.containerguide .left{
 	width:33.33%;
 	display:flex;
 	flex-direction:row;
 }
-.container .middle{
+.containerguide .middle{
 	width:33.33%;
 	display:flex;
 	flex-direction:row;
 }
-.container .right{
+.containerguide .right{
 	width:33.33%;
 	display:flex;
 	flex-direction:row;
@@ -363,15 +363,15 @@
 	position:relative;
 	overflow:hidden;
 }
-.destination-left h1{
+.destination-left .h1{
 	text-align:center;
 	letter-spacing:1px;
 	font-size:26px;
+	position:absolute;
 }
 .img-destination-left{
 	max-width: 100%;
     transition: all 0.3s;
-    display: block;
     width: 100%;
     height: auto;
     transform: scale(1);
@@ -383,8 +383,11 @@
 	width:32%;
 	height:100%;
 	margin-left:2%;
-	position:relative;
 	overflow:hidden;
+	position:relative;
+}
+.destination-right .h1{
+	position:absolute;
 }
 .img-destination-right{
 	max-width: 100%;
@@ -559,17 +562,15 @@
 	flex-direction:row;;
 }
 .f-card{
-	width:25%;
+	width:33.33%;
 }
 .f-card1{
-	width:25%;
+	width:33.33%;
 }
 .f-card2{
-	width:25%;
+	width:33.33%;
 }
-.f-card3{
-	width:25%;
-}
+
 .f-head{
 	letter-spacing:1px;
 	font-size:18px;
@@ -587,6 +588,101 @@
 }
 .f-para{
 	margin-top:10%;
+}
+
+
+}
+#testimonials{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width:100%;
+}
+.testimonial-heading{
+    letter-spacing: 1px;
+    margin: 30px 0px;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.testimonial-heading h1{
+    font-size: 2.2rem;
+    font-weight: 500;
+    background-color: #1e90ff;
+    color: #ffffff;
+    padding: 10px 20px;
+}
+.testimonial-heading span{
+    font-size: 1.3rem;
+    color: #252525;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+.testimonial-box-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width:100%;
+}
+.testimonial-box{
+    width:500px;
+    box-shadow: 2px 2px 30px rgba(0,0,0,0.1);
+    background-color: #ffffff;
+    padding: 20px;
+    margin: 15px;
+    cursor: pointer;
+}
+.profile-img{
+    width:50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+}
+.profile-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.profile{
+    display: flex;
+    align-items: center;
+}
+.name-user{
+    display: flex;
+    flex-direction: column;
+}
+.name-user strong{
+    color: #3d3d3d;
+    font-size: 1.1rem;
+    letter-spacing: 0.5px;
+}
+.name-user span{
+    color: #979797;
+    font-size: 0.8rem;
+}
+.reviews{
+    color: #f9d71c;
+}
+.box-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.client-comment p{
+    font-size: 0.9rem;
+    color: #4b4b4b;
+}
+.testimonial-box:hover{
+    transform: translateY(-10px);
+    transition: all ease 0.3s;
 }
 
 @media screen and (max-width: 768px){
@@ -748,25 +844,25 @@
 	border:1px solid #dcdcdc;
 	border-radius:5px;
 	}*/
-	.container{
+	.containerguide{
 	width:70%;
 	height:auto;
 	margin:0 auto;
 	display:flex;
 	flex-direction:column;
 }
-.container .left{
+.containerguide .left{
 	width:100%;
 	display:flex;
 	flex-direction:row;
 }
-.container .middle{
+.containerguide .middle{
 	width:100%;
 	display:flex;
 	flex-direction:row;
 	margin-top:7%;
 }
-.container .right{
+.containerguide .right{
 	width:100%;
 	display:flex;
 	flex-direction:row;
@@ -1117,10 +1213,7 @@
 	width:100%;
 	margin-top:8%;
 }
-.f-card3{
-	width:100%;
-	margin-top:8%;
-}
+
 .f-head{
 	letter-spacing:1px;
 	font-size:20px;
@@ -1139,5 +1232,10 @@
 .f-para{
 	margin-top:5%;
 }
-
+.testimonial-box{
+        width:100%;
+    }
+    .testimonial-heading h1{
+        font-size: 1.4rem;
+    }
 }
