--- a/assets/css/himachal.css
+++ b/assets/css/himachal.css
@@ -481,7 +481,7 @@
 	
 }
 	.about-banners{
-		background: url(../images/beech1.jpg);
+		background: url(../images/himachal1.jpg);
 		height:100vh;
 		background-size:cover;
 		overflow:hidden;
@@ -583,6 +583,7 @@
 .container-cards .cards .hotel{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .para{
 	margin-left:4%;
@@ -614,6 +615,7 @@
 .container-cards .cards .price{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .price-p{
 	margin-left:4%;
@@ -670,6 +672,7 @@
 .container-cards .cards1 .hotel{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .para{
 	margin-left:4%;
@@ -701,6 +704,7 @@
 .container-cards .cards1 .price{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .price-p{
 	margin-left:4%;
@@ -758,6 +762,7 @@
 .container-cards .cards2 .hotel{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .para{
 	margin-left:4%;
@@ -789,6 +794,7 @@
 .container-cards .cards2 .price{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .price-p{
 	margin-left:4%;
