--- a/assets/css/sikkim.css
+++ b/assets/css/sikkim.css
@@ -666,7 +666,7 @@
 	
 }
 	.about-banners{
-		background: url(../images/beech1.jpg);
+		background: url(../images/sikkim.jpeg);
 		height:100vh;
 		background-size:cover;
 		overflow:hidden;
@@ -768,6 +768,7 @@
 .container-cards .cards .hotel{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .para{
 	margin-left:4%;
@@ -799,6 +800,7 @@
 .container-cards .cards .price{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .price-p{
 	margin-left:4%;
@@ -855,6 +857,7 @@
 .container-cards .cards1 .hotel{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .para{
 	margin-left:4%;
@@ -886,6 +889,7 @@
 .container-cards .cards1 .price{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .price-p{
 	margin-left:4%;
@@ -943,6 +947,7 @@
 .container-cards .cards2 .hotel{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .para{
 	margin-left:4%;
@@ -974,6 +979,7 @@
 .container-cards .cards2 .price{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .price-p{
 	margin-left:4%;
@@ -1034,6 +1040,7 @@
 .container-cards .cards3 .hotel{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .para{
 	margin-left:4%;
@@ -1065,6 +1072,7 @@
 .container-cards .cards3 .price{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .price-p{
 	margin-left:4%;
@@ -1125,6 +1133,7 @@
 .container-cards .cards4 .hotel{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .para{
 	margin-left:4%;
@@ -1156,6 +1165,7 @@
 .container-cards .cards4 .price{
 	width:100%;
 	height:auto;
+	border:none;
 }
 .price-p{
 	margin-left:4%;
