--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -300,7 +300,6 @@
 .img-cards{
 	width:100%;
 	height:40%;
-	position:relative;
 	overflow:hidden;
 }
 .img1card{
@@ -381,9 +380,10 @@
 .destination-left{
 	width:66%;
 	height:100%;
-	position:relative;
 	overflow:hidden;
+	position:relative
 }
+
 .destination-left .h1{
 	text-align:center;
 	letter-spacing:1px;
@@ -393,8 +393,6 @@
 .img-destination-left{
 	max-width: 100%;
     transition: all 0.3s;
-    width: 100%;
-    height: auto;
     transform: scale(1);
 }
 .img-destination-left:hover{
@@ -708,6 +706,41 @@
     transition: all ease 0.3s;
 }
 
+
+
+
+/*.container{
+	width:90%;
+	margin:0 auto;
+	display:flex;
+	flex-direction:row;
+	flex-wrap:wrap;
+}
+.container .box{
+	width:31.43%;
+	min-height:31.43%;
+	background-color:red;
+	margin:10px;
+	display:inline-block;
+	box-sizing:border-box;
+	
+}
+.imgbox{
+	position:relative;
+	overflow:hidden;
+}
+.imgbox img{
+	max-width:100%;
+	transition: all 0.3s;
+	transform:scale(1);
+}
+.container .box:hover .imgbox img{
+	transform:scale(1.1);
+}
+.container .box .details{
+	position:absolute;
+}*/
+
 @media screen and (max-width: 768px){
 	.fixed{
 	top:50%;
@@ -783,6 +816,23 @@
 	margin-left:4%;
 	margin-right:4%;
 	}
+	
+	/*.container{
+	width:90%;
+	height:40%;
+	margin:0 auto;
+	display:flex;
+	flex-direction:row;
+	flex-wrap:wrap;
+}
+.container .box{
+	width:31.43%;
+	background-color:red;
+	margin:3px;
+	display:inline-block;
+	box-sizing:border-box;
+	
+}*/
 	
 	/*.banner-container{
 	width:70%;
