--- a/assets/css/slide1.css
+++ b/assets/css/slide1.css
@@ -27,9 +27,8 @@
 	line-height:90px;
 }
 .navbar .logo{
-	width:13%;
+	width:15%;
 	margin-left:5%;
-	margin-top:20px;
 }
 .navbar nav ul{
 	float:right;
@@ -332,6 +331,9 @@ textarea{
 .list-group-item .info{
 	
 }
+.p-3.list-group-item img{
+	width:100%;
+}
 
 
 @media screen and (max-width: 768px){
@@ -353,8 +355,7 @@ textarea{
 	}
 	.navbar .logo{
 		width:30%;
-		margin-left:10%;
-		margin-top:20px;
+		margin-left:5%;
 	}
 	.navbar nav ul{
 		float:none;
