--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,14 +7,16 @@
 	font-family: 'Poppins', sans-serif;
 }
 .whatsapp{
-	bottom:20px;
+	bottom:15px;
 	position:fixed;
 	margin-left:95%;
 }
 .whatsicon{
 	width:90%;
 	margin-right:0;
+	margin-top:5px;
 }
+
 .fixed{
 	top:50%;
 	position:fixed;
@@ -1342,5 +1344,15 @@
 .whatsicon{
 	width:100%;
 	margin-right:0;
+}
+.phone{
+	bottom:20px;
+	position:fixed;
+	margin-right:90%;
+	margin-left:5px;
+}
+.phoneicon{
+	width:100%;
+	margin-left:0;
 }
 }
