--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -6,6 +6,26 @@
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
 }
+.whatsapp{
+	bottom:15px;
+	position:fixed;
+	margin-left:95%;
+}
+.whatsicon{
+	width:90%;
+	margin-right:0;
+	margin-top:5px;
+}
+.whatsapp{
+	bottom:15px;
+	position:fixed;
+	margin-left:95%;
+}
+.whatsicon{
+	width:90%;
+	margin-right:0;
+	margin-top:5px;
+}
 .fixed{
 	top:50%;
 	position:fixed;
@@ -476,6 +496,15 @@
 	flex-direction:column;
 	border:1px solid #e8e8e8;
 }
-
+.whatsapp{
+	bottom:20px;
+	position:fixed;
+	margin-left:90%;
+	margin-right:5px;
+}
+.whatsicon{
+	width:100%;
+	margin-right:0;
+}
 }
 	
