--- a/assets/css/bali.css
+++ b/assets/css/bali.css
@@ -6,6 +6,16 @@
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
 }
+.whatsapp{
+	bottom:15px;
+	position:fixed;
+	margin-left:95%;
+}
+.whatsicon{
+	width:90%;
+	margin-right:0;
+	margin-top:5px;
+}
 .about-banners{
 	background: url(../images/bali1.jpeg);
 	height:130vh;
@@ -1293,6 +1303,16 @@
 }
 .f-para{
 	margin-top:5%;
+}
+.whatsapp{
+	bottom:20px;
+	position:fixed;
+	margin-left:90%;
+	margin-right:5px;
+}
+.whatsicon{
+	width:100%;
+	margin-right:0;
 }
 }
 	
