--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -6,7 +6,16 @@
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
 }
-
+.whatsapp{
+	bottom:15px;
+	position:fixed;
+	margin-left:95%;
+}
+.whatsicon{
+	width:90%;
+	margin-right:0;
+	margin-top:5px;
+}
 .about-banners{
 	background: url(../images/beech.jpg);
 	height:130vh;
@@ -453,5 +462,15 @@
 	font-weight:bold;
 	letter-spacing:1px;
 	text-align:center;
+}
+.whatsapp{
+	bottom:20px;
+	position:fixed;
+	margin-left:90%;
+	margin-right:5px;
+}
+.whatsicon{
+	width:100%;
+	margin-right:0;
 }
 }
