--- a/assets/css/international.css
+++ b/assets/css/international.css
@@ -6,7 +6,16 @@
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
 }
-
+.whatsapp{
+	bottom:15px;
+	position:fixed;
+	margin-left:95%;
+}
+.whatsicon{
+	width:90%;
+	margin-right:0;
+	margin-top:5px;
+}
 .about-banners{
 	background: url(../images/beech.jpg);
 	height:130vh;
@@ -392,5 +401,14 @@
 .f-para{
 	margin-top:5%;
 }
-	
+.whatsapp{
+	bottom:20px;
+	position:fixed;
+	margin-left:90%;
+	margin-right:5px;
+}
+.whatsicon{
+	width:100%;
+	margin-right:0;
+}	
 }
