--- a/assets/css/slide1.css
+++ b/assets/css/slide1.css
@@ -6,6 +6,16 @@
 	box-sizing: border-box;
 	font-family: 'Poppins', sans-serif;
 }
+.whatsapp{
+	bottom:15px;
+	position:fixed;
+	margin-left:95%;
+}
+.whatsicon{
+	width:90%;
+	margin-right:0;
+	margin-top:5px;
+}
 .about-banners{
 	background: url(../images/ladhak.jpg);
 	height:45vh;
@@ -546,6 +556,15 @@ textarea{
 	margin-top:5%;
 }
 
-
+.whatsapp{
+	bottom:20px;
+	position:fixed;
+	margin-left:90%;
+	margin-right:5px;
+}
+.whatsicon{
+	width:100%;
+	margin-right:0;
+}
 }
 	
