--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -21,13 +21,13 @@ body{
 }
 .form{
 	width:94%;
-	height:90%;
+	height:210%;
 	margin:3%;
 	display:flex;
 	flex-direction:row;
 }
 .form-left{
-	width:70%;
+	width:100%;
 	height:96%;
 	margin:1%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -59,6 +59,7 @@ input{
 	border:none;
 	border-bottom:2px solid #d4d4d4;
 	outline:none;
+	font-size:18px;
 }
 textarea{
 	width:94%;
@@ -66,12 +67,13 @@ textarea{
 	border:none;
 	border-bottom:2px solid #d4d4d4;
 	outline:none;
+	font-size:18px;
 }
 input::placeholder , textarea::placeholder{
 	font-size:18px;
 }
 .button{
-	height:20%;
+	height:15%;
 	width:18%;
 	margin:2%;
 	outline:none;
@@ -91,6 +93,7 @@ input::placeholder , textarea::placeholder{
 	margin:1%;
 	display:flex;
 	flex-direction:column;
+	display:none;
 }
 .setting{
 	width:100%;
@@ -163,10 +166,27 @@ input::placeholder , textarea::placeholder{
 	display:flex;
 	flex-direction:column;
 }
+input{
+	width:45%;
+	height:25%;
+	margin:2%;
+	border:none;
+	border-bottom:2px solid #d4d4d4;
+	outline:none;
+	font-size:14px;
+}
 input::placeholder , textarea::placeholder{
 	font-size:14px;
 }
-.setting-content h1{
-	margin-bottom:2%;
+.setting-content{
+	display:none;
+}
+textarea{
+	width:94%;
+	margin:2%;
+	border:none;
+	border-bottom:2px solid #d4d4d4;
+	outline:none;
+	font-size:14px;
 }
 }
