--- a/assets/css/domestic.css
+++ b/assets/css/domestic.css
@@ -126,7 +126,7 @@
 .title{
 	width:100%;
 	height:20%;
-	background: linear-gradient(115deg, #56d8e4 10%, #9f01ea 90%);
+	background: #1f75fe;
 	border-top:6px solid #ffffff;
 	justify-content:center;
 	text-align:center;
